@@ -1,3 +1,8 @@
+2012-04-23  Richard Guenther  <rguenther@suse.de>
+
+	PR c/53060
+	* c-typeck.c (build_binary_op): Fix typo.
+
 2012-04-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimizations/52891
